# saturnin

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
cmake/: CodeCoverage.cmake  FindSDL2.cmake  Findcppunit.cmake  Valgrind.cmake
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/include/saturnin/: Array.h.func-sort-c.html  Array.h.func.html  Array.h.gcov.html  Assert.h.func-sort-c.html  Assert.h.func.html  Assert.h.gcov.html  CNFReader.h.func-sort-c.html  CNFReader.h.func.html  CNFReader.h.gcov.html  Clause.h.func-sort-c.html  Clause.h.func.html  Clause.h.gcov.html  ClauseAllocator.h.func-sort-c.html  ClauseAllocator.h.func.html  ClauseAllocator.h.gcov.html  DBWrapper.h.func-sort-c.html  DBWrapper.h.func.html  DBWrapper.h.gcov.html  ExpSlidingMean.h.func-sort-c.html  ExpSlidingMean.h.func.html  ExpSlidingMean.h.gcov.html  Fifo.h.func-sort-c.html  Fifo.h.func.html  Fifo.h.gcov.html  Heap.h.func-sort-c.html  Heap.h.func.html  Heap.h.gcov.html  LocalSearchSolver.h.func-sort-c.html  LocalSearchSolver.h.func.html  LocalSearchSolver.h.gcov.html  Mean.h.func-sort-c.html  Mean.h.func.html  Mean.h.gcov.html  ParallelSolver.h.func-sort-c.html  ParallelSolver.h.func.html  ParallelSolver.h.gcov.html  PoolList.h.func-sort-c.html  PoolList.h.func.html  PoolList.h.gcov.html  Simplifier.h.func-sort-c.html  (+14 more)
coverage/src/: Utils.h.func-sort-c.html  Utils.h.func.html  Utils.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/src/libsaturnin/: Assert.cpp.func-sort-c.html  Assert.cpp.func.html  Assert.cpp.gcov.html  CNFReader.cpp.func-sort-c.html  CNFReader.cpp.func.html  CNFReader.cpp.gcov.html  Clause.cpp.func-sort-c.html  Clause.cpp.func.html  Clause.cpp.gcov.html  ClauseAllocator.cpp.func-sort-c.html  ClauseAllocator.cpp.func.html  ClauseAllocator.cpp.gcov.html  DBWrapper.cpp.func-sort-c.html  DBWrapper.cpp.func.html  DBWrapper.cpp.gcov.html  DBWrapperUtils.cpp.func-sort-c.html  DBWrapperUtils.cpp.func.html  DBWrapperUtils.cpp.gcov.html  DBWrapperUtils.h.func-sort-c.html  DBWrapperUtils.h.func.html  DBWrapperUtils.h.gcov.html  ExpSlidingMean.cpp.func-sort-c.html  ExpSlidingMean.cpp.func.html  ExpSlidingMean.cpp.gcov.html  FileReader.cpp.func-sort-c.html  FileReader.cpp.func.html  FileReader.cpp.gcov.html  FileReader.h.func-sort-c.html  FileReader.h.func.html  FileReader.h.gcov.html  Launcher.cpp.func-sort-c.html  Launcher.cpp.func.html  Launcher.cpp.gcov.html  LocalSearchSolver.cpp.func-sort-c.html  LocalSearchSolver.cpp.func.html  LocalSearchSolver.cpp.gcov.html  Logger.cpp.func-sort-c.html  Logger.cpp.func.html  Logger.cpp.gcov.html  Mean.cpp.func-sort-c.html  (+29 more)
doc/html/: _array_8h_source.html  _assert_8h_source.html  _c_n_f_reader_8h_source.html  _clause_8h_source.html  _clause_allocator_8h_source.html  _d_b_wrapper_8h_source.html  _exp_sliding_mean_8h_source.html  _fifo_8h_source.html  _heap_8h_source.html  _launcher_8h_source.html  _local_search_solver_8h_source.html  _logger_8h_source.html  _mean_8h_source.html  _parallel_solver_8h_source.html  _pool_list_8h_source.html  _random_generator_8h_source.html  _saturnin_8h_source.html  _simplifier_8h_source.html  _sliding_mean_8h_source.html  _solver_8h_source.html  _stop_watch_8h_source.html  _variables_manager_8h_source.html  _weak_bool_8h_source.html  annotated.html  annotated.js  classes.html  classsaturnin_1_1_array-members.html  classsaturnin_1_1_array.html  classsaturnin_1_1_array.js  classsaturnin_1_1_c_n_f_reader-members.html  classsaturnin_1_1_c_n_f_reader.html  classsaturnin_1_1_c_n_f_reader.js  classsaturnin_1_1_clause-members.html  classsaturnin_1_1_clause.html  classsaturnin_1_1_clause.js  classsaturnin_1_1_clause_allocator-members.html  classsaturnin_1_1_clause_allocator.html  classsaturnin_1_1_clause_allocator.js  classsaturnin_1_1_d_b_wrapper-members.html  classsaturnin_1_1_d_b_wrapper.html  (+115 more)
docs/: index.html
include/saturnin/: Array.h  Assert.h  Assert.h.orig  CNFReader.h  Clause.h  ClauseAllocator.h  DBWrapper.h  ExpSlidingMean.h  Fifo.h  Heap.h  Launcher.h  LocalSearchSolver.h  Logger.h  Mean.h  ParallelSolver.h  PoolList.h  RandomGenerator.h  Saturnin.h  Simplifier.h  SlidingMean.h  Solver.h  StopWatch.h  VariablesManager.h  WeakBool.h
src/: Utils.h
src/gsaturnin/: GUISaturnin.cpp  GUISaturnin.h  ValueEvolution.h  main.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
src/libsaturnin/: Array.cpp  Assert.cpp  CNFReader.cpp  Clause.cpp  ClauseAllocator.cpp  DBWrapper.cpp  DBWrapperUtils.cpp  DBWrapperUtils.h  ExpSlidingMean.cpp  FileReader.cpp  FileReader.h  Launcher.cpp  LocalSearchSolver.cpp  Logger.cpp  Mean.cpp  ParallelSolver.cpp  PoolList.cpp  RandomGenerator.cpp  Simplifier.cpp  SlidingMean.cpp  Solver.cpp  StopWatch.cpp  Utils.cpp
test/instances/: all.used-as.sat04-986.simplified.cnf  openstacks-cnfdd.cnf  presumed.cnf  simple.cnf
test/src/: ArrayTest.cpp  ArrayTest.h  AssertTest.cpp  AssertTest.h  CNFReaderTest.cpp  CNFReaderTest.h  ClauseTest.cpp  ClauseTest.h  DBWrapperTest.cpp  DBWrapperTest.h  ExpSlidingMeanTest.cpp  ExpSlidingMeanTest.h  FifoTest.cpp  FifoTest.h  HeapTest.cpp  HeapTest.h  LocalSearchSolverTest.cpp  LocalSearchSolverTest.h  LoggerTest.cpp  LoggerTest.h  MeanTest.cpp  MeanTest.h  ParallelSolverTest.cpp  ParallelSolverTest.h  PoolListTest.cpp  PoolListTest.h  RandomGeneratorTest.cpp  RandomGeneratorTest.h  SimplifierTest.cpp  SimplifierTest.h  SlidingMeanTest.cpp  SlidingMeanTest.h  SolverTest.cpp  SolverTest.h  VariablesManagerTest.cpp  VariablesManagerTest.h  main.cpp
